--- a/local/configs/python.yaml
+++ b/local/configs/python.yaml
@@ -3,8 +3,9 @@ author_info:
   name: Vaughn Kottler
   email: vaughnkottler@gmail.com
   username: vkottler
-versions: ["3.11", "3.12"]
 
+# Use the same versions and systems that vmklib uses.
+versions: ["3.10", "3.11", "3.12"]
 systems:
   - macos-latest
   - windows-latest
