--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
 name = "experimental-lowqa"
-version = "0.1.1"
+version = "0.1.2"
 description = "Read the sign."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -37,7 +37,7 @@ test = [
   "isort",
   "yamllint",
   "yambs",
-  "vmklib",
+  "vmklib>=2.0.3",
   "sphinx",
   "sphinx-book-theme",
   "setuptools-wrapper",
