--- a/local/configs/python.yaml
+++ b/local/configs/python.yaml
@@ -1,11 +1,11 @@
 ---
 author_info:
   name: Vaughn Kottler
-  email: vaughnkottler@gmail.com
+  email: vaughn@libre-embedded.com
   username: vkottler
 
 # Use the same versions and systems that vmklib uses.
-versions: ["3.10", "3.11", "3.12"]
+versions: ["3.12", "3.13"]
 systems:
   - macos-latest
   - windows-latest
